--- a/src/components/pages/home.page.scss
+++ b/src/components/pages/home.page.scss
@@ -2,13 +2,50 @@
 
 p {
   font-family: $titleFount;
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-style: italic;
   font-weight: 200;
   color: #fff;
 }
 
+.lower-message {
+  font-size: 2rem;
+  margin: 1.5rem 1.5rem 1.5rem 1.5rem;
+}
+
 .main-top-home-page-container {
   display: flex;
   background-color: black;
+  justify-content: space-between;
+}
+
+.welcome-message-container {
+  margin-top: 5rem;
+  margin-right: 2rem;
+  margin-left: 22rem;
+}
+
+.main-botton-home-page-container {
+  display: flex;
+}
+
+.top-image-container {
+  margin: 4rem 0rem 1rem 0rem;
+}
+.image-formation-container {
+  background-color: rgba(23, 21, 21, 1);
+  margin: 3rem 3rem 3rem 23rem;
+}
+
+.main-botton-home-page-container {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(11, 9, 9, 1);
+}
+.card-footballer-container {
+  display: flex;
+  background-color: rgba(11, 9, 9, 1);
+  margin: 3rem 20rem 3rem 5rem;
+  justify-content: flex-end;
+  align-self: self-end;
 }
