--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -5,4 +5,28 @@
   color: #fff;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-login {
+  border-radius: 0.5rem;
+  width: 20rem;
+  padding: 0.3rem;
+}
+
+.login-button {
+  font-size: 1.5rem;
+  font-style: italic;
+  border-radius: 1rem;
+  width: 7rem;
+  padding: 0.3rem;
+  color: #fff;
+  background-color: rgba(24, 156, 78, 1);
+}
+
+.buttons-login-page {
+  display: flex;
+  margin-top: 3rem;
+  gap: 14rem;
 }
