Add display grid for list component

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -12,6 +12,7 @@ $black-gradient-to-top: linear-gradient(
 
 // fut-player-card
 .fut-player-card {
+  margin-top: 7rem;
   position: relative;
   width: 21rem;
   height: 485px;
