Add partial media query for card

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -15,7 +15,7 @@ $black-gradient-to-top: linear-gradient(
   margin-top: 7rem;
   position: relative;
   width: 21rem;
-  height: 485px;
+  height: 30.313rem;
   background-image: url(https://res.cloudinary.com/dnlkezvzv/image/upload/v1702311761/proyecto%20final/ygnixhrdpxqrqnz9djsb.png);
   background-position: center center;
   background-size: 100% 100%;
