--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,3 +1,5 @@
+@import '../vars.scss';
+
 $gold: #e9cc74;
 $black-gradient-to-bottom: linear-gradient(
   to bottom,
@@ -12,6 +14,8 @@ $black-gradient-to-top: linear-gradient(
 
 // fut-player-card
 .fut-player-card {
+  font-family: $titleFount;
+  font-style: italic;
   margin-top: 7rem;
   position: relative;
   width: 21rem;
@@ -41,7 +45,12 @@ $black-gradient-to-top: linear-gradient(
       .player-position {
         font-size: 1.4rem;
       }
-      .player-nation {
+
+      .player-overall {
+        font-size: 1.4rem;
+      }
+
+      /* .player-nation {
         display: block;
         width: 2rem;
         height: 25px;
@@ -59,11 +68,11 @@ $black-gradient-to-top: linear-gradient(
           height: 100%;
           object-fit: contain;
         }
-      }
+      } */
     }
     .player-picture {
-      width: 200px;
-      height: 200px;
+      width: 12.5rem;
+      height: 12.5rem;
       margin: 0 auto;
       overflow: hidden;
       img {
@@ -143,4 +152,173 @@ $black-gradient-to-top: linear-gradient(
       }
     }
   }
+}
+
+.button-edit {
+  background: rgba(45, 42, 42, 1);
+  width: 1.5rem;
+  border-radius: 0.7rem;
+  color: black;
+  height: 1.6rem;
+  margin: 0rem 0rem 0rem 0rem;
+  position: relative;
+  bottom: 1.6rem;
+  left: 13.5rem;
+
+  gap: 1rem;
+  text-decoration: none;
+}
+
+.button-details {
+  background: rgba(45, 42, 42, 1);
+  width: 1.5rem;
+  border-radius: 0.7rem;
+  color: black;
+  height: 1.6rem;
+  margin: 0rem 0rem 0rem 0rem;
+  position: relative;
+  bottom: 1rem;
+  left: 13.5rem;
+  gap: 1rem;
+  text-decoration: none;
+}
+
+.button-delete {
+  background: rgba(45, 42, 42, 1);
+  width: 1.5rem;
+  border-radius: 0.7rem;
+  color: black;
+  height: 1.6rem;
+  margin: 0rem 0rem 0rem 0rem;
+  position: relative;
+  bottom: 0.5rem;
+  left: 13.5rem;
+  gap: 1rem;
+  text-decoration: none;
+}
+
+.player-picture-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 460px) {
+  .fut-player-card {
+    width: 16rem;
+    height: 20rem;
+  }
+
+  .player-picture {
+    display: none;
+  }
+
+  .player-picture-mobile {
+    display: contents;
+    width: 12.5rem;
+    height: 12.5rem;
+    margin: 0 auto;
+    overflow: hidden;
+    img {
+      object-fit: contain;
+      position: relative;
+      left: 3rem;
+      bottom: 1.2rem;
+    }
+  }
+
+  .span-player-position {
+    font-size: 1.2rem;
+  }
+  .span-player-name {
+    font-size: 1.1rem;
+  }
+
+  .fut-player-card {
+    margin: 0rem 0rem 0rem 3rem;
+  }
+
+  .player-card-top {
+    position: relative;
+    bottom: 1.2rem;
+    right: -0.5rem;
+
+    img {
+      position: relative;
+      bottom: -0.5rem;
+    }
+  }
+
+  .player-info {
+    position: relative;
+    top: -1rem;
+  }
+  .fut-player-card
+    .player-card-bottom
+    .player-info
+    .player-features
+    .player-features-col {
+    font-size: 1rem;
+    border-right: 2px solid rgba(233, 204, 116, 0.1);
+    padding: 0 0.29999999999999716rem;
+  }
+
+  .button-edit {
+    position: relative;
+    bottom: 2.4rem;
+    left: 9rem;
+
+    gap: 1rem;
+  }
+
+  .button-details {
+    margin: 0rem 0rem 0rem 0rem;
+    position: relative;
+    bottom: 1.8rem;
+    left: 9rem;
+    gap: 1rem;
+    text-decoration: none;
+  }
+
+  .button-delete {
+    margin: 0rem 0rem 0rem 0rem;
+    position: relative;
+    bottom: 1.2rem;
+    left: 9rem;
+    gap: 1rem;
+    text-decoration: none;
+  }
+
+  .player-features {
+    margin: 0.5rem auto;
+    display: flex;
+    justify-content: center;
+    .player-features-col {
+      border-right: 2px solid rgba($gold, 0.1);
+      padding: 0 2.3rem;
+      span {
+        display: flex;
+
+        text-transform: uppercase;
+        .player-feature-value {
+          font-size: 1rem;
+          margin-right: 0.3rem;
+          font-weight: 700;
+        }
+        .player-feature-title {
+          font-size: 1rem;
+          font-weight: 300;
+        }
+      }
+    }
+    .player-features-col:last-child {
+      border: 0;
+    }
+  }
+
+  /*  .player-features {
+    font-size: 3rem;
+  } */
+
+  /* .player-card-bottom {
+    font-size: 12rem;
+  } */
 }
