--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -1,16 +1,13 @@
-.footballers-list {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-}
-
-@media screen and (max-width: 460px) {
+@media screen and (min-width: 750px) {
   .footballers-list {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
+}
 
-  .fut-player-card {
-    width: 16rem;
-    height: 18rem;
+@media screen and (min-width: 1100px) {
+  .footballers-list {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
   }
 }
