--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -17,6 +17,14 @@ header {
   background-color: $headerBackGroundOne;
 }
 
+p {
+  font-family: $titleFount;
+  font-size: 2.5rem;
+  font-style: italic;
+  font-weight: 200;
+  color: #fff;
+}
+
 .header-main-container {
   display: flex;
   margin-inline: 3.5rem;
@@ -27,7 +35,6 @@ header {
 }
 
 .icons-container {
-  font-size: 2rem;
   display: flex;
   justify-content: flex-end; /* Alinea los elementos a la derecha */
   gap: 4rem; /* Espaciado entre elementos */
@@ -44,4 +51,41 @@ header {
 .logged-user-name {
   margin: 0rem 0rem 0rem 0rem;
   font-size: 1.2rem;
+}
+
+@media screen and (max-width: 460px) {
+  header {
+    font-size: 0.7rem;
+    height: 5.8rem;
+  }
+
+  p {
+    font-size: 1.1rem;
+  }
+
+  .header-main-container {
+    padding: 0rem 0rem 0rem 0rem;
+    margin-right: 2rem;
+    margin-left: 0.4rem;
+  }
+
+  .icons-container {
+    gap: 1.5rem; /* Espaciado entre elementos */
+  }
+
+  .logged-user-name {
+    margin: 0rem 0rem 0rem 0rem;
+    font-size: 0.9rem;
+  }
+
+  .image-user-logged {
+    margin-top: 0.3rem;
+  }
+
+  .button-create-footballer {
+    font-family: $titleFount;
+    font-size: 0.9rem;
+    width: 8rem;
+    margin-left: 1rem;
+  }
 }
