--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -12,6 +12,12 @@ $black-gradient-to-top: linear-gradient(
   rgba(0, 0, 0, 0.9) 90%
 );
 
+.my-swal-popup {
+  background-color: #333;
+  color: rgb(255, 255, 255);
+  font-family: $titleFount;
+}
+
 // fut-player-card
 .fut-player-card {
   font-family: $titleFount;
