Add test of delete, update and filter in footballer slice

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -18,6 +18,11 @@ $black-gradient-to-top: linear-gradient(
   font-family: $titleFount;
 }
 
+.fa-solid fa-pencil {
+  width: 5rem;
+  height: 5rem;
+  color: white;
+}
 // fut-player-card
 .fut-player-card {
   font-family: $titleFount;
