--- a/src/components/pages/my.players.scss
+++ b/src/components/pages/my.players.scss
@@ -6,3 +6,8 @@
   display: flex;
   justify-content: space-between;
 }
+
+.top-buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
