More styles of details

--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -6,27 +6,49 @@
   display: flex;
   padding-top: 6rem;
   gap: 4rem;
-}
+  .image-details-container {
+  }
+  .data-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    background-color: rgb(11, 9, 9);
+    width: 55rem;
+    height: 40rem;
+    padding-top: 3rem;
+    .main-data-group {
+      display: flex;
+      flex-direction: column;
+      width: 40rem;
 
-.data-container {
-  display: flex;
-  gap: 2rem;
-  background-color: rgb(11, 9, 9);
-  width: 55rem;
-  height: 40rem;
-  padding-top: 3rem;
+      gap: 3rem;
+      .data-group {
+        display: flex;
+        justify-content: space-between;
+        padding: 0rem 0rem 0rem 3rem;
+        .p-container {
+          span {
+            margin-inline-start: 0.6rem;
+          }
+        }
+      }
+      .data-group2 {
+        display: flex;
+        justify-content: space-between;
+        padding: 0rem 0rem 0rem 3rem;
+        .p-container {
+          span {
+            margin-inline-start: 0.6rem;
+          }
+        }
+      }
+    }
+  }
 }
 
 .data-player-name {
   display: flex;
-}
-.data-group {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  padding: 0rem 0rem 0rem 3rem;
-
-  /* Ajusta el ancho según tu preferencia */
 }
 
 .custom-details-writting {
