--- a/src/components/pages/login.page.scss
+++ b/src/components/pages/login.page.scss
@@ -39,3 +39,19 @@
     gap: 1rem;
   }
 }
+
+.main-login-page-container {
+  height: 100vh;
+}
+
+@media screen and (max-width: 460px) {
+  .main-login-container {
+    padding: 0rem 0rem 20rem 22rem;
+    width: 4rem;
+    margin-left: 3rem;
+    margin-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
+    margin-block-start: 2rem;
+  }
+}
