--- a/src/components/create-footballer/create.footballer.scss
+++ b/src/components/create-footballer/create.footballer.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 200vh;
 
   font-family: $mainFont;
 }
@@ -23,106 +23,62 @@
   background-color: black;
   margin-top: 2rem;
   border-radius: 0.5rem;
-  width: 90rem;
-  height: 45rem;
+  width: 18rem;
+  height: 100rem;
   padding-left: 2rem;
-  padding-bottom: 8rem;
+  padding-bottom: 20rem;
   margin-bottom: 4rem;
 
   label {
-    padding-top: 2rem;
+    padding-top: 1rem;
     padding-right: 1rem;
   }
 
-  .input-create-form {
+  .create-form {
+    font-family: $mainFont;
+    color: #fff;
     display: flex;
-
-    .label-input-container-1 {
-      display: flex;
-    }
-
-    .label-input-container-2 {
-      display: flex;
-    }
-
-    .label-input-container-3 {
-      display: flex;
-    }
-
-    .label-input-container-4 {
-      display: flex;
-    }
-
-    .input-create-form3 {
-      display: flex;
-    }
-    .input-create-form4 {
-      display: flex;
-    }
-    .input-create-form5 {
-      display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    input {
+      height: 1.8rem;
+      width: 15rem;
+      padding: 0.75rem 2rem 0rem 3rem;
+      margin: 0.5rem 2rem 0rem 0rem;
+      display: inline-block;
+      border-radius: 0.5rem;
     }
   }
 
-  .input-create-form-2 {
+  .create-footballerr-buttons-container {
     display: flex;
-    padding-inline-end: 2.7rem;
-    padding-block-start: 1rem;
+    gap: 3rem;
+    padding-top: 3rem;
+    padding-right: 2rem;
 
-    .label-input-container-5 {
-      display: flex;
-      padding-left: 1rem;
-    }
-
-    .label-input-container-6 {
-      display: flex;
-    }
-
-    .label-input-container-7 {
-      display: flex;
-    }
-
-    .label-input-container-8 {
-      display: flex;
-    }
-  }
-
-  .input-create-form-3 {
-    display: flex;
-    /*  padding-inline-end: 2.7rem;
-      padding-block-start: 1rem; */
-
-    .label-input-container-9 {
-      display: flex;
-    }
-
-    .label-input-container-10 {
-      display: flex;
-    }
-
-    .label-input-container-11 {
-      display: flex;
-    }
-
-    .label-input-container-12 {
-      display: flex;
+    .create-footballer-button-container {
+      .create-footballer-button {
+        font-size: 1.2rem;
+        font-style: normal;
+        border-radius: 1rem;
+        width: 6rem;
+        padding: 0.3rem;
+        color: #fff;
+        background-color: rgba(24, 156, 78, 1);
+        text-align: center;
+      }
     }
   }
 }
 
-.create-form {
-  font-family: $mainFont;
+.create-footballer-cancel-button {
+  font-size: 1.2rem;
+  font-style: normal;
+  border-radius: 1rem;
+  width: 6rem;
+  padding: 0.3rem;
   color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  input {
-    height: 1.8rem;
-    width: 8rem;
-    padding: 0.75rem 2rem 0rem 3rem;
-    margin: 0.5rem 2rem 0rem 0rem;
-    display: inline-block;
-    border-radius: 0.5rem;
-  }
+  background-color: rgba(24, 156, 78, 1);
+  text-align: center;
 }
