Add style of edit footballer component

--- a/src/components/create-footballer/create.footballer.scss
+++ b/src/components/create-footballer/create.footballer.scss
@@ -49,6 +49,10 @@
       display: inline-block;
       border-radius: 0.5rem;
     }
+
+    textarea {
+      padding: 0.75rem 1rem 1rem 0rem;
+    }
   }
 
   .create-footballerr-buttons-container {
