Correction in home page media query

--- a/src/components/edit.footballer/edit.footballer.scss
+++ b/src/components/edit.footballer/edit.footballer.scss
@@ -8,6 +8,11 @@
   height: 180vh;
 
   font-family: $mainFont;
+
+  .title-edit-footballer {
+    font-family: $mainFont;
+    font-size: 3rem;
+  }
 }
 
 .main-edit-footballer-container {
