--- a/src/components/pages/home.page.scss
+++ b/src/components/pages/home.page.scss
@@ -1,5 +1,9 @@
 @import '../vars.scss';
 
+.main-container {
+  height: 120vh;
+}
+
 .lower-message {
   font-size: 2rem;
   margin: 1.5rem 1.5rem 1.5rem 1.5rem;
@@ -48,6 +52,10 @@
 }
 
 @media (max-width: 460px) {
+  .main-container {
+    height: 80vh;
+  }
+
   .card-footballer-container {
     display: none;
   }
