--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -121,13 +121,14 @@
     padding-top: 1.5rem;
     padding-left: 2.8rem;
     gap: 4rem;
-    height: 100vh;
+    height: 120vh;
 
     .data-container {
       padding-top: 0rem;
       padding-right: 1rem;
+      margin-left: 1rem;
       height: 35rem;
-      width: 23.2rem;
+      width: 18.5rem;
 
       .data-player-name {
         .p-data-player-name {
@@ -173,6 +174,7 @@
 
     .image-details-container-mobile {
       display: contents;
+      margin-right: 4rem;
     }
 
     .player-nation-flag {
