--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -154,7 +154,7 @@ $black-gradient-to-top: linear-gradient(
 }
 
 .button-edit {
-  background: rgba(45, 42, 42, 1);
+  background: rgb(24, 156, 78);
   width: 1.5rem;
   border-radius: 0.7rem;
   color: black;
@@ -172,7 +172,7 @@ $black-gradient-to-top: linear-gradient(
 }
 
 .button-details {
-  background: rgba(45, 42, 42, 1);
+  background: rgb(24, 156, 78);
   width: 1.5rem;
   border-radius: 0.7rem;
   color: black;
@@ -190,7 +190,7 @@ $black-gradient-to-top: linear-gradient(
 }
 
 .button-delete {
-  background: rgba(45, 42, 42, 1);
+  background: rgb(24, 156, 78);
   width: 1.5rem;
   border-radius: 0.7rem;
   color: black;
@@ -205,6 +205,7 @@ $black-gradient-to-top: linear-gradient(
   display: flex;
   flex-direction: column;
   justify-content: center;
+  cursor: pointer;
 }
 
 .player-picture-mobile {
