--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -1,7 +1,7 @@
 @import '../vars.scss';
 
 select {
-  background: black;
+  background: rgb(24, 156, 78);
   padding: 0.6rem;
   border-radius: 1rem;
   font-family: $titleFount;
