--- a/src/components/pages/login.page.scss
+++ b/src/components/pages/login.page.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   margin-block-start: 2rem;
 }
-/ .image-login {
+.image-login {
   display: flex;
   justify-content: center;
   align-items: center;
